# TimerContext

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-autoapprove.yaml  dependabot-automerge.yml  linting.yaml  semantic-release.yaml  testing-reusable.yaml  testing.yaml
tests/: test_timer_context.py
timer_context/: __init__.py  context.py
